<?xml version="1.0"?>
<package format="3">
  <name>to_rosbag</name>
  <version>1.0.0</version>
  <description>
    c++ project with ros
  </description>
  <maintainer email="xxx@xxx.com">
  </maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>regex</depend>
  <depend>opencv2</depend>
  <depend>rospy</depend> 
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- <exec_depend>message_runtime</exec_depend> -->
</package>
